Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44408

inconsistent output file behaviour in qmake

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.0 Alpha
    • 5.4.0
    • Build tools: qmake
    • None
    • 8cea3ec8ce7f4110e849b53e3c97b690a8899dd9

    Description

      The behaviour of qmake's -o switch differs between Windows vcxproj output and Mac xcodeproj output.

      On Windows you must specify the extension:
      qmake -tp vc -o foo bar.pro => generates foo (wrong)
      qmake -tp vc -o foo.vcxproj bar.pro => generates foo.vcxproj (correct)

      On Mac, you must omit the extension:
      qmake -spec macx-xcode -o foo bar.pro => foo.xcodeproj (correct)
      qmake -spec macx-xcode -o foo.xcodeproj bar.pro => foo.xcodeproj (correct, except... run it again

      qmake -spec macx-xcode -o foo.xcodeproj bar.pro => foo.xcodeproj/foo.xcodeproj (wrong!)

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vestbo Tor Arne Vestbø
              hmoffatt Hamish Moffatt
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes